Update project descriptions in index.html
Replaced project details with a link to the design portfolio.

--- a/index.html
+++ b/index.html
@@ -38,16 +38,9 @@
       <h2>Design Projects</h2>
       <div class="cards">
         <div class="card">
-          <h3>Underwater Drone</h3>
-          <p>Hydrodynamic drone designed using SolidWorks with dual air-water capability. Focus on structural integrity and functional performance.</p>
-        </div>
-        <div class="card">
-          <h3>Dual Air-Water UAV Concept</h3>
-          <p>Innovative UAV capable of seamless transition between air and water environments. Conceptualized propulsion and frame design.</p>
-        </div>
-        <div class="card">
-          <h3>Extraterrestrial Rover Proposal</h3>
-          <p>Rover for challenging terrains with advanced locomotion system and scientific instruments. Submitted technical proposal to ISRO.</p>
+          <h3>My Design Portfolio</h3>
+          <p>Click below to explore all my CAD designs, UAV projects, and prototypes.</p>
+          <a href="https://github.com/saicharanbg/portfolio" target="_blank" class="btn">View Designs</a>
         </div>
       </div>
     </div>
