Update portfolio link to new URL

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="card">
           <h3>My Design Portfolio</h3>
           <p>Click below to explore all my CAD designs, UAV projects, and prototypes.</p>
-          <a href="https://github.com/saicharanbg/portfolio" target="_blank" class="btn">View Designs</a>
+          <a href="https://saicharanbg.vercel.app/" target="_blank" class="btn">View Designs</a>
         </div>
       </div>
     </div>
