Update link in design portfolio card

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
       <h2>Design Projects</h2>
       <div class="cards">
         <div class="card">
-          <h3>My Design Portfolio</h3>
-          <p>Click below to explore all my CAD designs, UAV projects, and prototypes.</p>
-          <a href="https://saicharanbg.vercel.app/" target="_blank" class="btn">View Designs</a>
+         <div class="card">
+          <div class="card">
+            <h3>My Design Portfolio</h3>
+            <p>Click below to explore all my CAD designs, UAV projects, and prototypes.</p>
+            <a href="https://github.com/saicharanbg/portfolio" target="_blank" class="btn">View Designs</a>
+          </div>
         </div>
       </div>
     </div>
